test/pass/enums_and_variants/match_skip_decomposition.lily
var v = Some(1)
match v: {
    case Some(_):
    case None:
}
